fix asciidoctor Java 17 issues