@@ -20,6 +20,11 @@ test {
 }
 
 asciidoctor {
+    inProcess = JAVA_EXEC
+    forkOptions {
+        jvmArgs("--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED", "--add-opens", "java.base/java.io=ALL-UNNAMED")
+    }
+
     attributes "snippets": snippetsDir,
             "source-highlighter": "coderay",
             "version": version,
